deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    alpha.image.policy.openshift.io/resolve-names: '*'
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"smgoapp:latest","namespace":"gotest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"smgoapp\")].image","pause":"false"}]'
  labels:
    app: smgoapp
    app.kubernetes.io/component: smgoapp
    app.kubernetes.io/instance: smgoapp
    app.kubernetes.io/name: smgoapp
    app.kubernetes.io/part-of: smgoapp
  name: smgoapp
  namespace: gotest
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: smgoapp
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: smgoapp
        deployment: smgoapp
    spec:
      containers:
      - image: image-registry.openshift-image-registry.svc:5000/gotest/smgoapp:latest
        imagePullPolicy: Always
        name: smgoapp
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
