deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: smgoapp
    app.kubernetes.io/component: smgoapp
    app.kubernetes.io/instance: smgoapp
    app.kubernetes.io/name: smgoapp
    app.kubernetes.io/part-of: smgoapp
  name: smgoapp
  namespace: gotest
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: smgoapp
    deployment: smgoapp
  sessionAffinity: None
  type: ClusterIP
